Finalizado Mini-Ejercicio 3: CRUD completo implementado