@@ -3,10 +3,9 @@ package com.example.demo;
 import com.example.demo.models.Task;
 import com.example.demo.repositories.TaskRepository;
 import com.example.demo.services.TaskService;
-import org.junit.jupiter.api.Test;
+import org.testng.annotations.Test;
 import org.mockito.Mockito;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -18,7 +17,7 @@ public class TaskServiceTest {
         TaskRepository repo = Mockito.mock(TaskRepository.class);
         TaskService service = new TaskService(repo);
 
-        Mockito.when(repo.findAll()).thenReturn(Arrays.asList(
+        Mockito.when(repo.findAll()).thenReturn(List.of(
                 new Task("Test", "Testing")
         ));
 
